--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3.8"
+    "python.pythonPath": "/Users/mauriciolizcano/.local/share/virtualenvs/DB-CRS-Backend-ImQ_hxEj/bin/python"
 }
