--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/mauriciolizcano/.local/share/virtualenvs/DB-CRS-Backend-ImQ_hxEj/bin/python"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3"
 }
